@@ -1146,6 +1146,7 @@ extern "C" {
 #define WGL_SWAP_UNDERLAY13 0x10000000
 #define WGL_SWAP_UNDERLAY14 0x20000000
 #define WGL_SWAP_UNDERLAY15 0x40000000
+#define AC_SRC_OVER 0 
 
 #ifndef RC_INVOKED
 typedef struct _ABC {
@@ -2324,6 +2325,12 @@ typedef struct tagLAYERPLANEDESCRIPTOR {
 	BYTE bReserved;
 	COLORREF crTransparent;
 } LAYERPLANEDESCRIPTOR,*PLAYERPLANEDESCRIPTOR,*LPLAYERPLANEDESCRIPTOR;
+typedef struct _BLENDFUNCTION {
+    BYTE BlendOp;
+    BYTE BlendFlags;
+    BYTE SourceConstantAlpha;
+    BYTE AlphaFormat; 
+} BLENDFUNCTION,*PBLENDFUNCTION,*LPBLENDFUNCTION; 
 typedef BOOL (CALLBACK *ABORTPROC)(HDC,int);
 typedef int (CALLBACK *MFENUMPROC)(HDC,HANDLETABLE*,METARECORD*,int,LPARAM);
 typedef int (CALLBACK *ENHMFENUMPROC)(HDC,HANDLETABLE*,ENHMETARECORD*,int,LPARAM);
