@@ -1,5 +1,10 @@
 2001-06-28 Danny Smith <dannysmith@users.sourceforge.net>
 
+	* include/wingdi.h (AC_SRC_OVER): Add define.
+	(struct _BLENDFUNCTION): Add.
+
+2001-06-28 Danny Smith <dannysmith@users.sourceforge.net>
+
 	* include/shlobj.h:  Add BIF_* defines.
 
 2001-06-27 Danny Smith <dannysmith@users.sourceforge.net>
